compiler/tests/fa/errors/slice_non_array.salam
// انتظار: خطا۰۲۱
// زبان: فارسی
تابع اصلی:
    متغیر مقدار := 5
    متغیر نتیجه := مقدار[1:2]
    چاپ نتیجه
تمام
